<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="@dimen/discovery_default_fragment_padding"
    tools:context=".ui.MusicBoxDiscoveryActivity">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="@dimen/discovery_section_icon_height"
        android:adjustViewBounds="true"
        android:contentDescription="@string/app_name"
        android:minHeight="@dimen/discovery_section_icon_height"
        app:srcCompat="@drawable/ic_discovering_failed_color_primary_24dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/music_box_discovery_failed_message"
        android:textAppearance="?textAppearanceHeadline5" />

    <Button
        android:id="@+id/retryMusicBoxSearchButton"
        style="?borderlessButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/discovery_button_search_margin_top"
        android:text="@string/music_box_discovery_failed_button_retry" />
</LinearLayout>
